# blog_site

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: includes.rs  main.rs
frontend/: app.py
frontend/templates/: home.html  login.html  signup.html
