[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-rustls", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
bcrypt = "0.17.1"
